2009-04-27  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* win/tclWinSock.c: Backport fix for [Bug 2446662]: resync Win
	behavior on RST with that of unix (EOF).

2009-04-22  Andreas Kupries  <andreask@activestate.com>

	* generic/tclStringObj.c (UpdateStringOfString): Added cast to fix
	  signed/unsigned mismatch breaking win32 symbol/debug build.

2009-04-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:       AppendUnicodeToUnicodeRep failed
	to set stringPtr->allocated to 0, leading to crashes.

2009-04-14  Stuart Cassoff  <stwo@users.sourceforge.net>

	* unix/tcl.m4:	Removed -Wno-implicit-int from CFLAGS_WARNING.

2009-04-08  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:	Fixed unsafe [eval]s in the tcltest
	* library/tcltest/pkgIndex.tcl:	package.  [Bug 2570363] 

2009-04-07  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:       Completed backports of fixes for
	[Bug 2494093] and [Bug 2553906].

2009-03-30  Don Porter  <dgp@users.sourceforge.net>

	* doc/Alloc.3:	Size argument is "unsigned int".  [Bug 2556263]

	* generic/tclStringObj.c:       Added protections from invalid memory
	* generic/tclTestObj.c:         accesses when we append (some part of)
	* tests/stringObj.test:         a Tcl_Obj to itself.  Added the
	appendself and appendself2 subcommands to the [teststringobj] testing
	command and added tests to the test suite.  [Bug 2603158]

2009-03-27  Don Porter  <dgp@users.sourceforge.net>

	* tests/fileName.test:	Tests for [Bug 2710920] to guard against
	its appearance.

2009-03-20  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Test stringObj-6.9 checks that
	* tests/stringObj.test:		Tcl_AppendStringsToObj() no longer
	crashes when operating on a pure unicode value.  [Bug 2597185]

	* generic/tclExecute.c (INST_CONCAT1):	Panic when appends overflow
	the max length of a Tcl value.  [Bug 2669109]

2009-03-18  Don Porter  <dgp@users.sourceforge.net>
